# tracking-allocator

./: CHANGELOG.md  Cargo.toml  README.md
benches/: baseline.rs  overhead.rs  registry.rs
examples/: deadlock.rs  stdout.rs  tracing.rs
src/: allocator.rs  lib.rs  stack.rs  token.rs  tracing.rs  util.rs
tests/: reentrancy.rs
